--- a/contato.html
+++ b/contato.html
@@ -11,21 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   </head>
   
   <body>
     <header class="header-bg">
       <div class="container flex-wrap-center p-2">
-        <a href="#">
+        <a href="./index.html">
           <div class="logo">
           <img src="./img/bikcraft.svg" alt="Bikcraft logo">
           </div>
         </a>
         <nav aria-label="primaria">
           <ul class="header-menu">
-            <li><a href="#">bicicletas</a></li>
-            <li><a href="#">seguros</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="./bicicletas.html">bicicletas</a></li>
+            <li><a href="./seguros.html">seguros</a></li>
+            <li><a href="./contato.html">contato</a></li>
           </ul>
         </nav>
       </div>
@@ -155,9 +156,9 @@
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
           <ul class="font-2-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
