--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head lang="pt-br">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,21 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   </head>
 
   <body>
     <header class="header-bg">
       <div class="container flex-wrap-center p-2">
-        <a href="#">
+        <a href="./index.html">
           <div class="logo">
           <img src="./img/bikcraft.svg" alt="Bikcraft logo">
           </div>
         </a>
         <nav aria-label="primaria">
           <ul class="header-menu">
-            <li><a href="#">bicicletas</a></li>
-            <li><a href="#">seguros</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="./bicicletas.html">bicicletas</a></li>
+            <li><a href="./seguros.html">seguros</a></li>
+            <li><a href="./contato.html">contato</a></li>
           </ul>
         </nav>
       </div>
@@ -39,7 +40,7 @@
           <p class="introducao-texto">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="btg" href="#">escolha a sua</a>
+          <a class="btg" href="./bicicletas.html">escolha a sua</a>
         </div>
         <div class="introducao-img">
           <source media="(max-width: 800px)" srcset="C:\Users\gabri\OneDrive\Área de Trabalho\bikcraft-final\img\bicicletas">
@@ -53,7 +54,7 @@
       </h2>
       <ul>
         <li>
-          <a href="#">
+          <a href="./bicicletas/magic.html">
             <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Magic">
             <h3 class="font-1-xl">
             Magic Might
@@ -64,7 +65,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./bicicletas/nimbus.html">
             <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus">
             <h3 class="font-1-xl">
             Nimbus Stark
@@ -75,7 +76,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./bicicletas/nebula.html">
             <img src="./img/bicicletas/nebula-home.jpg">
             <h3 class="font-1-xl">
             Nebula Cosmic
@@ -104,7 +105,7 @@
             Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.
           </p>
 
-          <a href="#">
+          <a href="./bicicletas.html">
             ESCOLHA UM MODELO
           </a>
 
@@ -189,7 +190,7 @@
               <li>Suporte 08h às 18h</li>
               <li>Cobertura estadual</li>
             </ul>
-            <a href="#" class="btg btg-color-5">
+            <a href="./orcamento.html" class="btg btg-color-5">
               inscreva-se
             </a>
           </div>
@@ -207,7 +208,7 @@
               <li>Desconto em parceiros</li>
               <li>Acesso ao Clube Bikcraft</li>
             </ul>
-            <a href="#" class="btg">
+            <a href="./orcamento.html" class="btg">
               inscreva-se
             </a>
           </div>
@@ -238,9 +239,9 @@
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
           <ul class="font-2-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
