--- a/seguros.html
+++ b/seguros.html
@@ -16,16 +16,16 @@
   <body>
     <header class="header-bg">
       <div class="container flex-wrap-center p-2">
-        <a href="#">
+        <a href="./index.html">
           <div class="logo">
           <img src="./img/bikcraft.svg" alt="Bikcraft logo">
           </div>
         </a>
         <nav aria-label="primaria">
           <ul class="header-menu">
-            <li><a href="#">bicicletas</a></li>
-            <li><a href="#">seguros</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="./bicicletas.html">bicicletas</a></li>
+            <li><a href="./seguros.html">seguros</a></li>
+            <li><a href="./contato.html">contato</a></li>
           </ul>
         </nav>
       </div>
@@ -52,7 +52,7 @@
                 <li>Suporte 08h às 18h</li>
                 <li>Cobertura estadual</li>
               </ul>
-              <a href="#" class="btg btg-color-5">
+              <a href="./orcamento.html" class="btg btg-color-5">
                 inscreva-se
               </a>
             </div>
@@ -70,7 +70,7 @@
                 <li>Desconto em parceiros</li>
                 <li>Acesso ao Clube Bikcraft</li>
               </ul>
-              <a href="#" class="btg">
+              <a href="./orcamento.html" class="btg">
                 inscreva-se
               </a>
             </div>
@@ -204,9 +204,9 @@
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
           <ul class="font-2-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./bicicletas.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
