--- a/termos.html
+++ b/termos.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Termos e condições">
@@ -16,16 +17,16 @@
   <body>
     <header class="header-bg">
       <div class="container flex-wrap-center p-2">
-        <a href="#">
+        <a href="./index.html">
           <div class="logo">
           <img src="./img/bikcraft.svg" alt="Bikcraft logo">
           </div>
         </a>
         <nav aria-label="primaria">
           <ul class="header-menu">
-            <li><a href="#">bicicletas</a></li>
-            <li><a href="#">seguros</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="./bicicletas.html">bicicletas</a></li>
+            <li><a href="./seguros.html">seguros</a></li>
+            <li><a href="./contato.html">contato</a></li>
           </ul>
         </nav>
       </div>
@@ -71,9 +72,9 @@
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
           <ul class="font-2-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
